[metadata]
name = mptools
version = 1.0.2b
author = Manuele Pesenti
author_email = manuele@inventati.org
description = A very custom collection of development shared libraries
long_description = file: README.md
long_description_content_type = text/markdown
; url = https://github.com/pypa/sampleproject
; project_urls =
;     Bug Tracker = https://github.com/pypa/sampleproject/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
    py4web
    pandas
    matplotlib
    numpy

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    dbgenie=mptools.command_line:dbgenie
